[project]
name = "WKMeans"
version = "0.0.1"
authors = [
  { name="Nicholas", email="nicholas0srs1111@gmail.com" },
]
description = "Clustering algorithm using Kmeans and Wasserstein distance"
readme = "docs/README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
